# GlaneNotes

./: .gitignore  README.md  README_CN.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/epaper_bsp/: CMakeLists.txt  epaper_driver_bsp.cpp  epaper_driver_bsp.h
firmware/main/: CMakeLists.txt  app_main.cpp  battery.cpp  battery.h  buttons.cpp  buttons.h  codec.cpp  codec.h  dog_sprites.h  font5x7.h  glane_config.h  idf_component.yml  inbox.cpp  inbox.h  player.cpp  player.h  recorder.cpp  recorder.h  sdcard.cpp  sdcard.h  settings.cpp  settings.h  sync.cpp  sync.h  timesync.cpp  timesync.h  tone.cpp  tone.h  transcribe.cpp  transcribe.h  ui.cpp  ui.h  webserver.cpp  webserver.h  wifi_mgr.cpp  wifi_mgr.h
firmware/scripts/: build.sh  common.sh  flash.sh  mic_debug.sh  monitor.sh
server/inbox-worker/: README.md  package.json  wrangler.toml
server/inbox-worker/src/: index.js
