idf_component_register(
    SRCS
        "app_main.cpp"
        "codec.cpp"
        "buttons.cpp"
        "sdcard.cpp"
        "settings.cpp"
        "recorder.cpp"
        "battery.cpp"
        "tone.cpp"
        "player.cpp"
        "timesync.cpp"
        "ui.cpp"
        "wifi_mgr.cpp"
        "transcribe.cpp"
        "sync.cpp"
        "inbox.cpp"
        "webserver.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_timer
        esp_psram
        nvs_flash
        fatfs
        sdmmc
        esp_adc
        freertos
        esp_hw_support
        heap
        log
        spi_flash
        esp_system
        esp_wifi
        esp_event
        esp_netif
        lwip
        esp_http_server
        esp_http_client
        esp-tls
        json
        epaper_bsp
    PRIV_REQUIRES
        esp_driver_i2s
        esp_driver_spi
        esp_driver_i2c
        esp_driver_sdmmc
        esp_driver_gpio
)
